--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,7 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css?family=Nunito:200,400,600');
 
+// GLOBAL
 $body-font-family: 'Nunito', sans-serif;
 $header-font-family: $body-font-family;
+$header-font-weight: bold;
 
 $global-radius: 5px;
+
+// ABOUT
+$about-text-color: #545454;
+$about-bg-color: #f1f1f1;
