Colors was updated

--- a/src/assets/scss/_settings.variables.scss
+++ b/src/assets/scss/_settings.variables.scss
@@ -5,6 +5,7 @@ $header-font-family: $body-font-family;
 $header-font-weight: bold;
 
 $global-radius: rem(16);
+$section-radius: rem(16 * 2);
 
 $body-bg: #1a1915;
 
